kubernetes-deployment/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: react-kube-demo
  labels:
    name: react-kube-demo
annotation:
  linkerd.io/inject: enabled
