kubernetes-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-kube-demo
  annotations:
    linkerd.io/inject: enabled
spec:
  type: ClusterIP
  selector:
    app: react-kube-demo
  ports:
    - port: 80
      targetPort: 80
      protocol: tcp
