kubernetes-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-kube-ingress
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: $service_name.$namespace.svc.cluster.local:$service_port
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Origin "";
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
    cert-manager.io/cluster-issuer: 'staging-issuer-amd64'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - thankyou.kanebroslab.com
    secretName: thanks-staging-tls-v1
  rules:
  - host: thankyou.kanebroslab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-kube-demo-amd64
            port:
              number: 80
